<resources>
    <string name="app_name">A Really Cool App Name</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_forums">Forums</string>
    <string name="menu_meditation">Meditation</string>
    <string name="menu_settings">Settings</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="login">Login</string>
    <string name="password_tag">Password</string>
    <string name="email_tag">Email</string>
    <string name="create_account"><u>Need an account?</u></string>
    <string name="forgot_pass"><u>Forgot password?</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tag_email_addy">Enter an email address</string>
    <string name="tag_cr_password">Enter a password</string>
    <string name="tag_con_password">Confirm password</string>
    <string name="tag_cre_account">Create Account</string>
    <string name="tag_register">Register</string>
    <string name="tag_logout">Logout</string>
    <string name="tag_associated">Email associated with your account</string>
    <string name="tag_reset">Reset Password</string>
    <string name="tag_first_name">Enter your first name</string>
    <string name="tag_last_name">Enter your last name</string>
    <string name="tag_l_first">First Name</string>
    <string name="tag_l_last">Last Name</string>
    <string name="tag_classes">Classes</string>
    <string name="tag_choose_classes">Choose Classes</string>
</resources>